# senpai-suggest

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  repo_setup.py
scripts/: check_tests.py
src/senpai_suggest/logger/: logger.py
